--- a/Comedy.html
+++ b/Comedy.html
@@ -61,7 +61,7 @@ body {
         
         <div class="col-xs-6 col-sm-3" id="thumb">
           <a href="lifestyle.html" class="thumbnail" >
-            <img src="file:///C:/Users/Invotech/Documents/azania/wellttv-master/TTV/3.png" alt="London" />
+            <img src="3.png" alt="London" />
           </a>
         </div>
         
