--- a/Music.html
+++ b/Music.html
@@ -61,7 +61,7 @@ body {
         
         <div class="col-xs-6 col-sm-3" id="thumb">
           <a href="Inspiraton.html" class="thumbnail" >
-            <img src="file:///C:/Users/Invotech/Documents/azania/wellttv-master/TTV/5.png" alt="London" />
+            <img src="5.png" alt="London" />
           </a>
         </div>
         
