--- a/Spiritual.html
+++ b/Spiritual.html
@@ -61,7 +61,7 @@ body {
         
         <div class="col-xs-6 col-sm-3" id="thumb">
           <a href="Comedy.html" class="thumbnail" >
-            <img src="file:///C:/Users/Invotech/Documents/azania/wellttv-master/TTV/4.png" alt="London" />
+            <img src="4.png" alt="London" />
           </a>
         </div>
         
