--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
         
         <div class="col-xs-6 col-sm-3" id="thumb">
           <a href="Business.html" class="thumbnail" >
-            <img src="file:///C:/Users/Invotech/Documents/azania/wellttv-master/TTV/6.png" alt="London" />
+            <img src="6.png" alt="London" />
           </a>
         </div>
         
