--- a/lifestyle.html
+++ b/lifestyle.html
@@ -61,7 +61,7 @@ body {
         
         <div class="col-xs-6 col-sm-3" id="thumb">
           <a href="music.html" class="thumbnail" >
-            <img src="file:///C:/Users/Invotech/Documents/azania/wellttv-master/TTV/1.png" alt="London" />
+            <img src="1.png" alt="London" />
           </a>
         </div>
         
