--- a/Business.html
+++ b/Business.html
@@ -60,7 +60,7 @@ body {
         
         
         <div class="col-xs-6 col-sm-3" id="thumb">
-          <a href="sport.html" class="thumbnail" >
+          <a href="Sport.html" class="thumbnail" >
             <img src="7.png" alt="London" />
           </a>
         </div>
