--- a/lifestyle.html
+++ b/lifestyle.html
@@ -60,7 +60,7 @@ body {
         
         
         <div class="col-xs-6 col-sm-3" id="thumb">
-          <a href="music.html" class="thumbnail" >
+          <a href="Music.html" class="thumbnail" >
             <img src="1.png" alt="London" />
           </a>
         </div>
