--- a/Inspiraton.html
+++ b/Inspiraton.html
@@ -60,7 +60,7 @@ body {
         
         
         <div class="col-xs-6 col-sm-3" id="thumb">
-          <a href="spiritual.html" class="thumbnail" >
+          <a href="Spiritual.html" class="thumbnail" >
             <img src="2.png" alt="London" />
           </a>
         </div>
