--- a/Business.html
+++ b/Business.html
@@ -48,7 +48,7 @@ body {
 </head>
 <body>
 
-<video autoplay loop id="myVideo">
+<video id="myVideo">
   <source src="https://player.vimeo.com/external/305289181.sd.mp4?s=a172ed9a74f5c88c83a605d2c1d88e449b1e3ba9&profile_id=164&oauth2_token_id=57447761" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
